--- a/style.css
+++ b/style.css
@@ -1,12 +1,15 @@
 /*Properties applicable to whole File */
 
-
+/* :root{
+    --bgcolor-: color)
+} */
 
 
 
 /* START */
 
-body{    
+body{
+    position: relative;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -40,8 +43,9 @@ nav{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
     width: 100%;
-    height: 5rem;
+    height: 4.5rem;
     background-color: white;
     border: 1px solid rgba(0, 0, 0, 0.303);
     border-right: none;
@@ -53,103 +57,76 @@ nav a{
     /* border: 2px solid rgba(0, 0, 0, 0.833); */
     padding: 8px;
     border-radius: 10px;
-}
-
-nav .logo{
-    width:12%;
+    opacity: 0.75;
 }
 
 
 
 nav .logo img{
-    margin-left: 2rem;
-    height: 5rem;
-    width: 7rem;
-}
+    margin-left: 4rem;
+    height: 2.8rem;
+    width: 20rem;
+    margin-top: -0.75rem;
 
-nav .navopt{
-    flex-grow: 1;
 }
 
 nav .navopt ul{
+    font-size: 14px;
+    margin: 0.75rem;
     display: flex;
     flex-direction: row;
     width: auto;
-    gap: 1.3rem;
+    gap: 1.25rem;
     height: 3rem;
     align-items: center;
-    justify-content: flex-end;
+    justify-content: flex-end;;
 }
 
 nav .navopt a:hover{
     /* background-color: rgb(20, 50, 221); */
-    color: rgb(147, 30, 30);
-    box-shadow: 0 0 3px rgb(47, 3, 206);
+    box-shadow: 0 0 3px rgb(0, 0, 0);
     transition-timing-function: ease-in-out;
     transition-delay: 0.1s;
+    opacity: 1;
 
 }
 
 
-.job-btn button{
-    margin: 0 1rem 0 1rem;
-    padding: 8px 14px;
-    border-radius: 10px;
+.job-btn {
+    font-family:monospace;
+    margin: 0 4rem 0 1rem;
+    padding: 6px 16px;
+    border-radius: 16px;
     background-color: black;
-    color: white;
+    color: rgba(255, 255, 255, 0.964);
     cursor:pointer;
-    font-weight: 600;
+    font-weight: 800;
+    font-size: 18px;
 }
 
-.job-btn button:hover{
+.job-btn:hover{
+    padding: 8px 18px;
     background-color: white;
     color: black;
+    transition:  0.5s ease-in-out;
 }
 
 
 
 /* END */
-
-
 /*Properties for HOME Page*/
 
 /* START */
 
-
 .homepage{
-    height:120vh;
+    height:116vh;
     width: 100%;
-    margin-bottom: 6rem;
     background-image: url("./assets/mainback.JPG");
-    background-size: cover;
+    background-size: 100% 100%;
+    margin-top: -12rem;
+    background-size:cover;
     color: black;
     /* flex: 1; */
-}
-
-.homepagemain{ 
-    position:static;
-    top: 30px;
-    left: 30px;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: flex-start;
-}
-
-
-
-.homepagetext{
-    font-weight: 500;
-    font-size: 3rem;
-    text-align: start;
-    color: white;
-}
-
-
-.homepageimg{
-    height: 8rem;
-    margin-left: 2rem;
 }
 
 
@@ -165,38 +142,42 @@ nav .navopt a:hover{
 
 /* START */
 .mainintro{
-    background-image: url("./assets/Adobe Express - file.png");
-    background-size: cover;
     display: flex;
-    height:120vh;
+    flex-wrap: wrap;
+    height:100vh;
     width: 100%;
-    margin-bottom: 4rem;
-    background-color: rgba(255, 255, 255, 0.959);
+    margin-bottom: 2rem;
+    background-color: rgba(234, 240, 251, 1);
     justify-content: center;
-    align-content:flex-start ;
+    align-content:center ;
 
 }
 
 .textintro{
-    font-size: 22px;
+    line-height: 6rem;
+    font-size: 20px;
     text-align: start;
     color: black;
 }
 
 .textintro .headingtextintro{
-    font-family: "PT serif", serif;
+    font-family: "Dela Gothic One", serif ;
     text-align: center;
-    margin-bottom: 4rem;
+    margin-bottom: 0.75rem;
 }
 .textintro .descintro{
-    font-weight: 400;
+    font-weight: 600;
     line-height: 1.75rem;
-    width: 45rem;
+    width: 64rem;
     height: 40vh;
-    font-size: 18px;
+    font-size: 16.5px;
+    opacity: 0.85;
     text-align: justify;
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    text-align: center;
+    font-family:Arial, Helvetica, sans-serif;
+}
+
+.desctext{
+    margin-top: 1rem;
 }
 /* END */
 
@@ -204,103 +185,172 @@ nav .navopt a:hover{
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
-    margin-bottom: 4rem;
-    height:110vh;
     width: 100%;
-}
-
-
-
-.service-cards{
-    /* flex: 1; */
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    align-items: center;
+    gap: 4rem;
 }
 
 .service-heading{
-    text-decoration:  4px underline rgb(00, 00, 00);
-    font-size: 1.8rem;
-    font-weight: 700;
+    font-family: "Dela Gothic One", serif ;
     text-align: center;
-    width: 100%;
-    margin: 3rem 0 3rem 0;
-    height: 3rem;
-    color: rgba(33, 32, 32, 0.91);
+    font-size: 2rem;
+    text-transform: uppercase;
+    letter-spacing: 0.07em;
+    
 }
 
-
+.service-block{
+    margin-bottom: 4rem;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 6rem;
+    justify-content: center;
+    align-content: space-between;
+}
 
 .service-card{
-    border-radius: 1.4rem;
+    width: 100%;
     display: flex;
-    /* margin-bottom: 2rem;
-    margin-left: 1rem;
-    margin-right: 1rem; */
+    flex-direction: row;
+    align-items: center;
+    gap: 2rem;
+    /* padding: 2rem; */
+
+}
+
+.card2{
+    flex-direction: row-reverse;
+}
+
+/* @keyframes slidein1{
+    0%{
+        display: none;
+        transform: translateX(100%);
+    }
+    100%{
+        display: flex;
+        transform: translateX(0);
+    }
+}
+
+@keyframes slidein2{
+    0%{
+        display: none;
+        transform: translateX(-100%);
+        opacity: 0;
+        
+    }
+
+    50%{
+        opacity: 0.5;
+    }
+
+    90%{
+        display: flex;
+        transform: translateX(0);
+        opacity: 0.8;
+    }
+    100%{
+        opacity: 1;
+    }
+}
+
+.card1,.card3{
+    animation: slidein1 1.2s linear 200ms ;
+}
+
+
+.card2{
+    animation: slidein2 1.2s linear 200ms ;
+} */
+
+/* @keyframes slideUp {
+    from {
+      opacity: 0;
+      transform: translateY(50px);
+    }
+    to {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
+  
+  .section {
+    opacity: 0;
+    animation: slideUp 0.6s ease-in-out forwards;
+  }
+  
+  .section:nth-child(1) {
+    animation-delay: 0.2s;
+  }
+  
+  .section:nth-child(2) {
+    animation-delay: 0.4s;
+  }
+  
+  .section:nth-child(3) {
+    animation-delay: 0.6s;
+  }
+   */
+
+   .section {
+    opacity: 0;
+    transform: translateY(50px);
+    transition: all 0.6s ease-in-out;
+  }
+  
+  .section.in-view {
+    opacity: 1;
+    transform: translateY(0);
+  }
+  
+
+.servicecardimg{
+    margin-top: 3rem;
+    display: flex;
+    justify-content: center;
+    width: 50%;
+    height: 25rem;
+}
+
+.servicecardimg img{
+    border-radius: 1.5rem;
+}
+
+.servicecardinfo{
+    width: 50%;
+    display: flex;
     flex-direction: column;
-    height: 28rem;
-    width: 18rem;
-    color: white;
-    border: 4px solid black;
-    background-color: rgba(108, 27, 27, 1);
-
+    justify-content: flex-start;
+    gap: 2rem;
 
 }
 
-.service-card:hover{
-    transform: scale(1.1);
-    background-color: rgb(4, 38, 142);
-}
-
-.service-card-comp{
+.servicecardheading{
+    font-family: "Dela Gothic One", serif ;
     text-align: center;
+    margin: 1.2rem 0 1rem 0;
+    font-size: 2rem;
+    text-transform: uppercase;
+    letter-spacing: 0.07em;
 }
 
-.service-card i{
-    border-radius: 1rem;
-    margin-top: 0.5rem;
-    margin-left: 1rem;
-    margin-right: 1rem;
-    text-align: center;
-    line-height: 6rem;
-    font-size: 5rem;
-    height: 8rem;
-    width: 15rem;
-}
-
-
-.service-card .sccheading{
-    font-weight: 600;
-    margin-top: 1rem;
-    margin-left: 1rem;
-    margin-right: 1rem;
-    height: 2.5rem;
-    width: 15rem;
-}
-
-.service-card .scctextbox{
+.servicecardpara{
+    font-family:Arial, Helvetica, sans-serif;
+    font-size: 12px;
+    opacity: 0.85;
     text-align: justify;
-    margin-top: 1.1rem;
-    margin-left: 1rem;
-    margin-right: 1rem;
-    height:12rem ;
-    width: 15rem;
-    opacity: 0.9;
+    margin: 2rem 2.5rem;
+    text-transform: uppercase;
+    letter-spacing: 0.16em;
+    line-height: 1.25rem;
+    font-weight: 600;
+    color: rgba(118, 117, 115, 1);
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
+.card2{
+    flex-direction: row-reverse;
+}
 
 
 
@@ -328,28 +378,29 @@ nav .navopt a:hover{
 .testimonialsmain{
     /* flex: 1; */
     margin-bottom: 4rem;
-    height:120vh;
+    height:100vh;
     width: 100%;
-    background-color: rgba(48, 46, 46, 0.736);
+    background-color: rgba(229, 237, 248, 1);
 }
 .clientsmain{
     /* flex: 1; */
     margin-bottom: 4rem;
     height:100vh;
     width: 100%;
-    background-color: rgba(48, 46, 46, 0.736);
+    background-color: rgba(229, 237, 248, 1);
 }
 .aboutmain{
     /* flex: 1; */
     margin-bottom: 4rem;
     height:100vh;
     width: 100%;
-    background-color: rgba(48, 46, 46, 0.736);
+    background-color: rgba(229, 237, 248, 1);
 }
 .implink-contactmain{
     /* flex: 1; */
     margin-bottom: 4rem;
     height:100vh;
     width: 100%;
-    background-color: rgba(48, 46, 46, 0.736);
+    background-color: rgba(229, 237, 248, 1);
 }
+
