--- a/style.css
+++ b/style.css
@@ -269,16 +269,15 @@ nav .navopt a:hover{
 }
 
 .servicecardpara{
-    font-family:var(--subheading);
-    font-size: 12px;
+    font-size: 16.5px;
     opacity: 0.85;
     text-align: justify;
-    margin: 2rem 2.5rem;
-    text-transform: uppercase;
-    letter-spacing: 0.16em;
-    line-height: 1.25rem;
+    font-family:var(--subheading);
+    text-align: justify;
+    /* margin: 2rem 2.5rem; */
     font-weight: 600;
-    color: rgba(118, 117, 115, 1);
+    line-height: 1.75rem;
+    color: rgb(0, 0, 0);
 }
 
 .card2{
