--- a/style.css
+++ b/style.css
@@ -58,7 +58,8 @@ nav a{
     /* border: 2px solid rgba(0, 0, 0, 0.833); */
     padding: 8px;
     border-radius: 10px;
-    opacity: 0.75;
+    opacity: 0.85;
+    font-weight: 500;
 }
 
 
