--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ nav{
     width: 100%;
     height: 4.5rem;
     background-color: white;
-    border: 1px solid rgba(0, 0, 0, 0.303);
+    border: 1.2px solid rgba(0, 0, 0, 0.303);
     border-right: none;
 }
 
@@ -120,7 +120,7 @@ nav .navopt a:hover{
 
 /* START */
 
-.homepage{
+/* .homepage{
     height:116vh;
     width: 100%;
     background-image: url("./assets/mainback.JPG");
@@ -128,8 +128,8 @@ nav .navopt a:hover{
     margin-top: -12rem;
     background-size:cover;
     color: black;
-    /* flex: 1; */
-}
+    flex: 1;
+} */
 
 
 
@@ -144,20 +144,36 @@ nav .navopt a:hover{
 
 /* START */
 .mainintro{
-    display: flex;
-    flex-wrap: wrap;
+
     height:100vh;
-    width: 100%;
     margin-bottom: 2rem;
-    background-color: rgba(239, 241, 245, 0.945);
-    justify-content: center;
+    background-color: rgba(195, 211, 237, 0.25);
+    display: flex;
+    justify-content: space-between;
+
 
 }
 
+.plane{
+    height: 100vh;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
+.plane img{
+    width:650px;
+    height: 450px;
+}
+
+
 .textintro{
+    width: 50%;
+    margin-left: 2rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
     line-height: 6rem;
     font-size: 20px;
-    text-align: start;
     color: black;
 }
 
@@ -170,8 +186,6 @@ nav .navopt a:hover{
 .textintro .descintro{
     font-weight: 600;
     line-height: 1.75rem;
-    width: 64rem;
-    height: 40vh;
     font-size: 16.5px;
     opacity: 0.85;
     text-align: justify;
@@ -189,6 +203,7 @@ nav .navopt a:hover{
     flex-wrap: wrap;
     width: 100%;
     gap: 4rem;
+    margin-bottom: 5rem;
 }
 
 .service-heading{
@@ -207,7 +222,7 @@ nav .navopt a:hover{
     display: flex;
     flex-direction: column;
     margin: 0 2rem 0 2rem;
-    gap: 6rem;
+    gap: 5rem;
     justify-content: center;
     align-content: space-between;
 }
@@ -285,23 +300,8 @@ nav .navopt a:hover{
     flex-direction: row-reverse;
 }
 
-
-.testimonialsmain{
-    flex: 1;
-    margin-bottom: 4rem;
-    height:100vh;
-    width: 100%;
-    background-color: rgba(229, 237, 248, 1);
-}
-.clientsmain{
-    flex: 1;
-    margin-bottom: 4rem;
-    height:100vh;
-    width: 100%;
-    background-color: rgba(229, 237, 248, 1);
-}
 .implink{
-    padding: 2rem 0;
+    padding: 3rem 0;
     display: flex;
     flex-direction: column;
     width: 100%;
@@ -328,6 +328,8 @@ nav .navopt a:hover{
     flex-direction: row;
 }
 
+
+
 .implink-images span{
     margin-top: 3rem;
     display: flex;
@@ -339,6 +341,22 @@ nav .navopt a:hover{
     border-radius: 24px;
     gap: 4px;
     box-shadow: 0 3px 4px 2px rgba(0, 0, 0, 0.444) ;
+}
+
+.implink-images a{
+    text-decoration: none;
+    width: 142px;
+    height: 220px;
+}
+
+.implink-images h4{
+    margin: 0;
+    padding: 10px 0 0 0 ;
+    width: 136px;
+    font-size: 10px;
+    font-family: var(--subheading);
+    text-align: center;
+    color: rgba(0, 0, 0, 0.852);
 }
 
 
@@ -444,6 +462,18 @@ span .icao{
     letter-spacing: 0.04em;
 }
 
+.contactinfo-detail a{
+    gap: 0.75rem;
+    font-family: var(--subheading);
+    font-size: 0.8rem;
+    font-weight: 400;
+    letter-spacing: 0.04em;
+    text-decoration: none;
+    color: inherit;
+}
+.contactinfo-detail-phno{
+    letter-spacing: 0.25em;
+}
 
 .contactaddress{
     display: flex;
