--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ nav{
     background-color: white;
     border: 1.2px solid rgba(0, 0, 0, 0.303);
     border-right: none;
-    border-radius:  10px;;
+    border-radius:  4px;
 }
 
 nav a{
@@ -61,6 +61,7 @@ nav a{
     padding: 8px;
     border-radius: 10px;
     opacity: 0.85;
+    transition: all 150ms ease-in-out;
 }
 
 
@@ -111,7 +112,7 @@ nav .navopt a:hover{
     transform: scale(1.02);
     background-color: white;
     color: black;
-    transition:  0.1s ease-in-out;
+    transition: all 150ms ease-in-out;
 }
 
 .drop{
@@ -141,6 +142,7 @@ nav .navopt a:hover{
 
 .drop:hover .dropdown{
     display: block;
+    transition: all 150ms ease-in-out;
 }
 
 i{
@@ -334,17 +336,67 @@ i{
     flex-direction: row-reverse;
 }
 
+.clientsmain{
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 5rem;
+    margin-bottom: 4rem;
+
+}
+
+.clientheading{
+    font-family: var(--heading);
+    text-align: center;
+    font-size: 2.5rem;
+    font-weight: 600;
+    text-transform: uppercase;
+    letter-spacing: 0.05em;
+}
+
+.container{
+    width: 75%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: center;
+    gap: 3rem;
+
+}
+
+.imgclients img{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100px;
+    width: 200px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 .gallerymain{
     display: flex;
+    flex-direction: column;
     justify-content: center;
-    align-items:baseline;
-    height: 100vh;
+    align-items:center;
+    height: 110vh;
 }
 
 .slider-container {
     width: 90%;
-    height: 90vh;
+    height: 85vh;
     overflow: hidden;
     position: relative;
     border-radius: 10px;
